--- a/_includes/disqus_comments.html
+++ b/_includes/disqus_comments.html
@@ -1,11 +1,13 @@
+<h1>{{ page.url | absolute_url }}</h1>
+<h1>{{site.domain}}{{ page.url | absolute_url }}</h1>
 {% if page.comments != false and jekyll.environment == "production" %}
 
   <div id="disqus_thread"></div>
   <script>
-    // var disqus_config = function () {
-    //   this.page.url = '{{ page.url | absolute_url }}';
-    //   this.page.identifier = '{{ page.url | absolute_url }}';
-    // };
+    var disqus_config = function () {
+      this.page.url = '{{ page.url | absolute_url }}';
+      this.page.identifier = '{{ page.url | absolute_url }}';
+    };
 
     (function() {
       var d = document, s = d.createElement('script');
