--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,6 @@
 layout: default
 ---
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
-
   <header class="post-header">
     <h1 class="post-title" itemprop="name headline">{{ page.title | escape }}</h1>
     <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
@@ -16,3 +15,8 @@ layout: default
     {% include disqus_comments.html %}
   {% endif %}
 </article>
+
+{% assign image_folder = page.path | replace_first: '_', '/assets/images/' | replace_first: '.markdown', '/' %}
+{% for image in page.images %}
+  <a href="{{image_folder}}{{image}}" class="fancybox" rel="gallery"><img src="{{image_folder}}small-{{image}}" /></a>
+{% endfor %}
