--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -47,6 +47,9 @@
 
 <script>
   $(document).ready(function() {
-    $('.fancybox').fancybox();
+    $('.fancybox').fancybox({
+        padding : 0,
+        openEffect  : 'elastic'
+    });
   });
 </script>
