--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,5 +18,7 @@ layout: default
 
 {% assign image_folder = page.path | replace_first: '_', '/assets/images/' | replace_first: '.markdown', '/' %}
 {% for image in page.images %}
-  <a href="{{image_folder}}{{image}}" class="fancybox" rel="gallery"><img src="{{image_folder}}small-{{image}}" /></a>
+  <a href="{{image_folder}}{{image}}" class="fancybox" rel="gallery">
+    <img src="{{image_folder}}small-{{image}}" style="margin: 15px;" />
+  </a>
 {% endfor %}
