--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,8 +14,7 @@
   <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" type="text/css" media="screen" />
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
-  <link rel="shortcut icon" href="/assets/images/favicon.png" type="image/x-icon">
-
+  <link rel="shortcut icon" type="image/png" href="/assets/images/favicon.png" sizes="32x32">
   {% if jekyll.environment == 'production' and site.google_analytics %}
   {% include google-analytics.html %}
   {% endif %}
