--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -1,3 +1,3 @@
 {% for image in page.images %}
-  {% include image.html src=image small=true %}
+  {% include image src=image small=true %}
 {% endfor %}
