--- a/assets/main.scss
+++ b/assets/main.scss
@@ -29,15 +29,28 @@ body {
 
 header {
 
+
+  .wrapper {
+
     background-image: url(/assets/images/golden_gate.jpg);
     background-repeat: no-repeat; 
     background-size:contain;
     background-position:center; 
-
-  .wrapper {
-
+    height: 163px;
     .site-title, .page-link {
-      color: #fff;
+    color: #ff6600;
+    // text-align: right;
+    // text-decoration: underline;
+    // text-shadow: 3px 2px;
+    }
+    .site-title {
+    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    font-style: italic;
+    font-weight: bold;
+    font-size: 210%;
+    }
+    .page-link {
+
     }
   }
 }
