--- a/assets/main.scss
+++ b/assets/main.scss
@@ -27,12 +27,14 @@ body {
     background-image: url(/assets/images/frame_1.png);
     left: 0;
     top: 0;
+    z-index: -9999;
   }
 
   .bottom-right-img {
     background-image: url(/assets/images/frame2.png);
     right: 0;
     bottom: 0;
+    z-index: -9999;
   }
 }
 
