--- a/assets/main.scss
+++ b/assets/main.scss
@@ -23,19 +23,19 @@ body {
 
   }
 
-  .top-left-img {
-    background-image: url(/assets/images/frame_13.png);
-    left: 0;
-    top: 0;
-    z-index: -9999;
-  }
+//   .top-left-img {
+//     background-image: url(/assets/images/frame_13.png);
+//     left: 0;
+//     top: 0;
+//     z-index: -9999;
+//   }
 
-  .bottom-right-img {
-    background-image: url(/assets/images/frame_23.png);
-    right: 0;
-    bottom: 0;
-    z-index: -9999;
-  }
+//   .bottom-right-img {
+//     background-image: url(/assets/images/frame_23.png);
+//     right: 0;
+//     bottom: 0;
+//     z-index: -9999;
+//   }
 }
 
 .wrapper {
@@ -96,7 +96,9 @@ footer {
   &.site-footer {
     padding: 0;
   }
-
+  // .footer-col.footer-col-2 {
+  //   right: 0%
+  // }
   .wrapper {
     background-image: url(/assets/images/tiburon_v2.jpg);
     height: 163px;
