chang post font

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -10,7 +10,7 @@ body {
   // border-style: double;
   // border-width: 3px;
   // border-radius: 10px;
-
+  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
   .top-left-img, .bottom-right-img {
     position: absolute;
     width: 270px;
