--- a/assets/main.scss
+++ b/assets/main.scss
@@ -6,6 +6,7 @@ $font-text: "Palatino Linotype", "Book Antiqua", Palatino, serif;
 
 body {
   font-size: 17px;
+  font-family: $font-text;
 }
 
 .page-content {
@@ -20,12 +21,18 @@ body {
     // border-style: double;
     // border-width: 3px;
     // border-radius: 10px;
-    font-family: $font-text;
     .top-left-img, .bottom-right-img {
       position: absolute;
       width: 270px;
       height: 80px;
       z-index: -1;
+    }
+    .read-more {
+      margin-top: -15px;
+      text-align: right;
+      a {
+        font-size: 18px;
+      }
     }
     a.post-link {
       font-style: italic;
@@ -47,7 +54,6 @@ header, footer {
   &.site-header, &.site-footer {
     border: 0;
   }
-  font-family: $font-text;
   font-style: italic;
   .wrapper {
     // border-radius: 5px;
@@ -84,7 +90,6 @@ header {
 }
 
 .pagination {
-  font-family: $font-text;
   margin-top: 30px;
   font-style: italic;
 }
