--- a/assets/main.scss
+++ b/assets/main.scss
@@ -7,7 +7,7 @@ $font-text: "Palatino Linotype", "Book Antiqua", Palatino, serif;
 body {
   font-size: 17px;
   font-family: $font-text;
-  // background-color:  #e6ffff;
+  background-color:  #e6ffff;
   // background-color:   #e6f9ff;
 
 }
@@ -21,7 +21,7 @@ body {
     padding: 10px 20px;
     margin: 20px 0px;
     position: relative;
-    // background-color: white;
+    background-color: white;
     // border-style: double;
     // border-width: 3px;
     // border-radius: 10px;
