background color update

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -8,7 +8,7 @@ body {
   font-size: 17px;
   font-family: $font-text;
   background-color:  #e6ffff;
-  // background-color:   #e6f9ff;
+  background-color:   #e6f9ff;
 
 }
 
