--- a/assets/main.scss
+++ b/assets/main.scss
@@ -26,6 +26,9 @@ body {
     img {
       border-radius: 5px;
     }
+    a{
+      text-decoration: underline;
+    }
     // border-style: double;
     // border-width: 3px;
     // .top-left-img, .bottom-right-img {
