--- a/assets/main.scss
+++ b/assets/main.scss
@@ -26,7 +26,7 @@ body {
     img {
       border-radius: 5px;
     }
-    a{
+    a:not(.post-link){
       text-decoration: underline;
     }
     // border-style: double;
