--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,6 +7,16 @@ layout: default
     <h1 class="post-title">{{ page.title | escape }}</h1>
   </header>
 
+<div class="subscribe">
+          <form action="https://getsimpleform.com/messages?form_api_token=25d273b74e476783ccbc1ae150032b7d" method="post">
+            <li class="contact-li">
+                <input type="email" placeholder="Your email" id="email"/>
+                <input type="submit" value="Subscribe" id="submit"/>
+                <!-- <input type="hidden" name='redirect_to' value="/path/to/thank-you.html"/>  -->
+            </li>
+        </form>
+        </div>
+        
   <div class="post-content">
     {{ content }}
   </div>
