subscription button working

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,15 +7,18 @@
 
     {% include header.html %}
         <div class="subscribe">
-          <form action="https://getsimpleform.com/messages?form_api_token=25d273b74e476783ccbc1ae150032b7d" method="post">
+          <form action="https://formspree.io/karmelalla@gmail.com" method="post">
             <li class="contact-li">
-                <input type="email" placeholder="Your email" id="email"/>
+                <input type="email" placeholder="Your email" name="_replyto"/>
                 <input type="submit" value="Subscribe" id="submit"/>
                 <!-- <input type="hidden" name='redirect_to' value="/path/to/thank-you.html"/>  -->
             </li>
         </form>
         </div>
       </div>
+
+    <main class="page-content" aria-label="Content">
+      <div class="wrapper">
 
     <main class="page-content" aria-label="Content">
       <div class="wrapper">
