russian subscribe button

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,8 @@
         <div class="subscribe">
           <form action="https://formspree.io/karmelalla@gmail.com" method="post">
             <li class="contact-li">
-                <input type="email" placeholder="Your email" name="_replyto"/>
-                <input type="submit" value="Subscribe" id="submit"/>
+                <input type="email" placeholder="Ваш email" name="_replyto"/>
+                <input type="submit" value="Подписаться" id="submit"/>
                 <!-- <input type="hidden" name='redirect_to' value="/path/to/thank-you.html"/>  -->
             </li>
         </form>
