--- a/_includes/subscribe.html
+++ b/_includes/subscribe.html
@@ -4,5 +4,6 @@
     <input type="email" placeholder="Ваш email" name="_replyto" required>
     <input type="submit" value="Подписаться" id="submit">
     <input type="hidden" name="_next" value="/index.html"> 
+    <input type="text" name="_gotcha" style="display:none" />
   </form>
 </div>
