--- a/assets/main.scss
+++ b/assets/main.scss
@@ -146,10 +146,11 @@ footer {
 .subscribe {
   position: relative;
   margin: auto;
+  padding: 2px 0;
   margin-top: 10px;
   max-width: calc(800px - (30px * 2));
   @include border-shadow;
-  font-size: 15px;
+  font-size: 14px;
   font-style: italic;
   font-weight: bold;
   background: white;  
