--- a/_includes/subscribe.html
+++ b/_includes/subscribe.html
@@ -1,6 +1,6 @@
 <div class="subscribe">
   <form action="https://formspree.io/karmelalla@gmail.com" method="post">
-    Если вы хотите получать рассылку, пожалуйста, оставьте свой email
+    Если вы хотите получать рассылку, пожалуйста, оставьте свой email&nbsp;
     <input type="email" placeholder="Ваш email" name="_replyto" required>
     <input type="submit" value="Подписаться" id="submit">
     <input type="hidden" name="_next" value="/index.html"> 
