--- a/assets/main.scss
+++ b/assets/main.scss
@@ -159,6 +159,9 @@ footer {
   
 .thumbnail {
   img {
-   margin-bottom: 10px;
+    margin-bottom: 10px;
+    // margin-right: 10px;
+    // float: left;
+    // width: 50%; 
   }
 }
