add name in subscription

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -155,6 +155,10 @@ footer {
   font-weight: bold;
   background: white;  
   text-align: center;
+
+  input {
+    margin-left: 3px;
+  }
 }
   
 .thumbnail {
