--- a/_includes/subscribe.html
+++ b/_includes/subscribe.html
@@ -1,7 +1,8 @@
 <div class="subscribe">
   <form action="https://formspree.io/karmelalla@gmail.com" method="post">
-    Если вы хотите получать рассылку, пожалуйста, оставьте свой email&nbsp;
-    <input type="email" placeholder="Ваш email" name="_replyto" required>
+    Пожалуйста, подписывайтесь на рассылку &nbsp;
+    <input type="text" placeholder="Ваше имя" name="name">
+    <input type="email" placeholder="Ваш email" name="replyto" required>
     <input type="submit" value="Подписаться" id="submit">
     <input type="hidden" name="_next" value="/index.html"> 
     <input type="text" name="_gotcha" style="display:none" />
