--- a/_includes/subscribe.html
+++ b/_includes/subscribe.html
@@ -1,10 +1,8 @@
 <div class="subscribe">
-  <form action="https://formspree.io/karmelalla@gmail.com" method="post">
+  <form action="https://getsimpleform.com/messages?form_api_token=25d273b74e476783ccbc1ae150032b7d" method="post">
     Пожалуйста, подписывайтесь на рассылку &nbsp;
     <input type="text" placeholder="Ваше имя" name="name">
     <input type="email" placeholder="Ваш email" name="replyto" required>
     <input type="submit" value="Подписаться" id="submit">
-    <input type="hidden" name="_next" value="/index.html"> 
-    <input type="text" name="_gotcha" style="display:none" />
   </form>
 </div>
