--- a/_includes/subscribe.html
+++ b/_includes/subscribe.html
@@ -1,8 +1,9 @@
 <div class="subscribe">
-  <form action="https://getsimpleform.com/messages?form_api_token=25d273b74e476783ccbc1ae150032b7d" method="post">
+  <!-- <form action="https://getsimpleform.com/messages?form_api_token=25d273b74e476783ccbc1ae150032b7d" method="post"> -->
+  <form>
     Пожалуйста, подписывайтесь на рассылку &nbsp;
     <input type="text" placeholder="Ваше имя и фамилия" name="name">
-    <input type="email" placeholder="Ваш email" name="replyto" required>
-    <input type="submit" value="Подписаться" id="submit">
+    <input type="email" placeholder="Ваш email" name="email" required>
+    <input type="button" value="Подписаться" id="submit">
   </form>
 </div>
