--- a/_includes/subscribe.html
+++ b/_includes/subscribe.html
@@ -4,6 +4,6 @@
     Пожалуйста, подписывайтесь на рассылку &nbsp;
     <input type="text" placeholder="Ваше имя и фамилия" name="name">
     <input type="email" placeholder="Ваш email" name="email" required>
-    <input type="button" value="Подписаться" id="submit">
+    <input type="submit" value="Подписаться" id="submit">
   </form>
 </div>
