--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,19 +18,10 @@
 
   <script src="//cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>
   <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css">
-  
-  <script type="text/javascript" src="{{ "/assets/main.js" | relative_url }}{{ "now" | date: "%Y%m%d%H%M%S" | prepend: "?" }}">
-  
+
+  <script type="text/javascript" src="{{ "/assets/main.js" | relative_url }}{{ "now" | date: "%Y%m%d%H%M%S" | prepend: "?" }}"></script>
+
   {% if jekyll.environment == 'production' and site.google_analytics %}
     {% include google-analytics.html %}
   {% endif %}
-
-  <script>
-    $(document).ready(function() {
-      $('.fancybox').fancybox({
-          padding : 0,
-          openEffect  : 'elastic'
-      });
-    });
-  </script>
 </head>
