--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,8 @@
 
     <nav class="site-nav">
       <div class="trigger">
-        {% for my_page in site.pages %}
+        {% assign pages = site.pages | reverse %}
+        {% for my_page in pages %}
           {% if my_page.title %}
           <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
           {% endif %}
