--- a/assets/main.scss
+++ b/assets/main.scss
@@ -94,6 +94,7 @@ header {
       // text-shadow: 3px 2px;
     }
     .site-title {
+      padding: 0 20px;
       font-weight: bold;
       font-size: 210%;
     }
