post-title size

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -42,7 +42,9 @@ body {
     a.fancybox:hover {
       text-decoration: none;
     }
-
+    .post-title {
+      font-size: 210%;
+    }
     .read-more {
       margin-top: -15px;
       text-align: right;
