font style paginator and site nav font size

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -106,12 +106,14 @@ header {
       border: none;
       padding: 0 20px;
       position: static;
+      font-size: 18px;
     }
   }
 }
 
 .pagination {
   margin-top: 30px;
+  font-style: italic;
 }
 
 footer {
