--- a/assets/main.scss
+++ b/assets/main.scss
@@ -46,13 +46,17 @@ body {
       font-size: 210%;
     }
     .read-more {
-      margin-top: -10px;
+      margin-top: -15px;
       text-align: right;
       font-style: italic;
       a {
         font-size: 18px;
       }
     }
+    .go-to-post {
+      margin-top: 0;
+    }
+
     // a.post-link {
     // }
     // .top-left-img {
