--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,9 @@
 
     {% include header.html %}
 
-    {% include subscribe.html %}
+    {% if page.url != '/subscription/' %}
+      {% include subscribe.html %}
+    {% endif %}
 
     <main class="page-content" aria-label="Content">
       <div class="wrapper">
