--- a/_includes/post.html
+++ b/_includes/post.html
@@ -8,7 +8,14 @@
     {% include thumbnail src=post.thumbnail %}
   {% endif %}
   {{ post.excerpt }}
-  <p>Теги: {{ post | tags }}</p>
+  
+  {% assign tags = post | tags %}
+  {% if tags != "" %}
+    <div class="tags">
+      <p>Теги: {{ tags }}</p>
+    </div>
+  {% endif %}
+
   <div class="read-more">
     <a class="post-link" href="{{ post.url | relative_url }}">читать далее...</a>
   </div>
