--- a/_layouts/tag_page.html
+++ b/_layouts/tag_page.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <h2>{{ page.tag }}</h2>
 
-{% include tag_cloud.html %}
+<!-- {% include tag_cloud.html %} -->
 
 <div class="post-list">
   {% for post in page.posts %}
