--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 
     {% include header.html %}
 
-    {% if page.url != '/subscription/' %}
+    {% if page.url != '/subscribe/' %}
       {% include subscribe.html %}
     {% endif %}
 
