--- a/assets/main.scss
+++ b/assets/main.scss
@@ -165,14 +165,16 @@ footer {
   }
 
   #submit {
-    background-color: #66dbff; 
+    background-color: #00b0e6; 
     border: none;
     color: white;
-    padding: 10px 32px;
+    padding: 10px 36px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 20px;
+    margin: 0;
+    font-style: normal;
   }
 }
 
