--- a/assets/main.scss
+++ b/assets/main.scss
@@ -58,7 +58,9 @@ body {
     }
     table {
       border-collapse: collapse;
-      width: 70%;
+      margin-left: auto;
+      margin-right: auto;
+      width: 60%;
 
 
       &, th, td {
