--- a/assets/main.scss
+++ b/assets/main.scss
@@ -196,3 +196,13 @@ footer {
     margin-bottom: 10px;
   }
 }
+
+.fancybox-title {
+  font-size: 100% !important;
+  font-family: $font-text !important;
+}
+
+.fancybox-title-over-wrap {
+  width: 100%;
+  text-align: center;
+}
