--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,8 @@
 
     {% include header.html %}
 
+    {% include menu.html %}
+
     {% if page.url != '/subscribe/' %}
       {% include subscribe.html %}
     {% endif %}
