--- a/assets/main.scss
+++ b/assets/main.scss
@@ -224,6 +224,11 @@ nav.menu {
 @media print {
   header {
     height: 40px;
+
+    .wrapper a.site-title {
+      padding: 0;
+      font-size: 100%;
+    }
   }
   .subscribe, nav.menu, footer {
     display: none;
